--- a/index.html
+++ b/index.html
@@ -22,21 +22,97 @@
             <p style="padding-bottom: 25px;">Ready to watch? Enter your email to create or restart your membership.</p>
             <div>
                 <input class="email" placeholder="Email address">
-            <a href="#" class="btn btn-xl">Get Started        <i class="fas fa-chevron-right btn-icon"></i></a>
+                <a href="#" class="btn btn-xl">Get Started <i class="fas fa-chevron-right btn-icon"></i></a>
             </div>
         </div>
     </header>
     <section>
         <div class="features">
-            
-            <div class="f f1">
-               hiasldf
-               <img src="../NetflixLandingPage/images/logo.png">
+            <div class="f1">
+                <div class="content">
+                    <h1>
+                        Enjoy on your TV
+                    </h1>
+                    <p>
+                        Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.
+                    </p>
+                </div>
+                <div class="image">
+                    <div class="vid">
+                        <video data-uia="nmhp-card-animation-asset-video" autoplay="" playsinline="" muted="" loop="">
+                            <source src="vids/video-tv-in-0819.m4v" type="video/mp4">
+                        </video>
+                    </div>
+                </div>
+            </div>
+            <div class="f1">
+                <div class="image" style="margin-right: 0;">
+                    <video data-uia="nmhp-card-animation-asset-video" autoplay="" playsinline="" muted="" loop="">
+                        <source
+                            src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices-in.m4v"
+                            type="video/mp4">
+                    </video>
+                </div>
+                <div class="content" style="margin-left:0;">
+                    <h1>
+                        Download your shows to watch offline
+                    </h1>
+                    <p>
+                        Save your favourites easily and always have something to watch.
+                    </p>
+                </div>
+            </div>
+            <div class="f1">
+                <div class="content">
+                    <h1>
+                        Create profiles for kids
+                    </h1>
+                    <p>
+                        Send children on adventures with their favourite characters in a space made just for them—free
+                        with your membership.
+                    </p>
+
+                </div>
+                <div class="image">
+                    <div class="vid">
+                        <img alt=""
+                            src="https://occ-0-2164-2186.1.nflxso.net/dnm/api/v6/19OhWN2dO19C9txTON9tvTFtefw/AAAABVr8nYuAg0xDpXDv0VI9HUoH7r2aGp4TKRCsKNQrMwxzTtr-NlwOHeS8bCI2oeZddmu3nMYr3j9MjYhHyjBASb1FaOGYZNYvPBCL.png?r=54d"
+                            data-uia="nmhp-card-animation-asset-image" class="default-ltr-cache-1d3w5wq">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
     <footer>
-
+        <div class="drop-down">
+            <h1>Frequently Asked Questions</h1>
+            <div class="drops">
+                <a src="#" >
+                <h2>What is Netflix</h2>
+                <i class="fa-solid fa-plus"></i>
+                </a>
+            </div>
+            <div class="drops">
+                <h2>How much does Netflix cost?</h2>
+                <i class="fa-solid fa-plus"></i>
+            </div>
+            <div class="drops">
+                <h2>Where can I watch?</h2>
+                <i class="fa-solid fa-plus"></i>
+            </div>
+            <div class="drops">
+                <h2>What Can I watch on Netflix?</h2>
+                <i class="fa-solid fa-plus"></i>
+            </div>
+            <div class="drops">
+                <h2>How do I cancel?</h2>
+                <i class="fa-solid fa-plus"></i>
+            </div>
+            <div class="drops">
+                <h2>Is Netflix good for kids?</h2>
+                <i class="fa-solid fa-plus"></i>
+            </div>
+        </div>
     </footer>
 </body>
 
