--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="images/logo.png">
     <script src="https://kit.fontawesome.com/e1b600b8f8.js" crossorigin="anonymous"></script>
     <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
+
 </head>
 
 <body>
@@ -87,33 +88,89 @@
         <div class="drop-down">
             <h1>Frequently Asked Questions</h1>
             <div class="drops">
-                <a src="#" >
-                <h2>What is Netflix</h2>
-                <i class="fa-solid fa-plus"></i>
+                <a href="javascript:" onclick="toggleVisibility(0)">
+                    <h2>What is Netflix</h2>
+                    <i class="fa-solid fa-plus"></i>
                 </a>
+                <p class="paras" id="paras0">
+                    Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime,
+                    documentaries and more – on thousands of internet-connected devices.
+
+                    You can watch as much as you want, whenever you want, without a single ad – all for one low monthly
+                    price. There's always something new to discover, and new TV shows and movies are added every week!
+                </p>
+
+            </div>
+
+            <div class="drops">
+                <a href="javascript:" onclick="toggleVisibility(1)">
+                    <h2>How much does Netflix cost?</h2>
+                    <i class="fa-solid fa-plus"></i>
+                </a>
+                <p class="paras" id="paras1">
+                    Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed
+                    monthly fee. Plans range from ₹149 to ₹649 a month. No extra costs, no contracts.
+                </p>
             </div>
             <div class="drops">
-                <h2>How much does Netflix cost?</h2>
-                <i class="fa-solid fa-plus"></i>
+                <a href="javascript:" onclick="toggleVisibility(2)">
+                    <h2>Where can I watch?</h2>
+                    <i class="fa-solid fa-plus"></i>
+                </a>
+                <p class="paras" id="paras2">
+                    Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at
+                    netflix.com from your personal computer or on any internet-connected device that offers the Netflix
+                    app, including smart TVs, smartphones, tablets, streaming media players and game consoles.
+
+                    You can also download your favourite shows with the iOS, Android, or Windows 10 app. Use downloads
+                    to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.
+                </p>
             </div>
             <div class="drops">
-                <h2>Where can I watch?</h2>
-                <i class="fa-solid fa-plus"></i>
+                <a href="javascript:" onclick="toggleVisibility(3)">
+                    <h2>What Can I watch on Netflix?</h2>
+                    <i class="fa-solid fa-plus"></i>
+                </a>
+                <p class="paras" id="paras3">
+                    Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning
+                    Netflix originals, and more. Watch as much as you want, anytime you want.
+                </p>
             </div>
             <div class="drops">
-                <h2>What Can I watch on Netflix?</h2>
-                <i class="fa-solid fa-plus"></i>
+                <a href="javascript:" onclick="toggleVisibility(4)">
+                    <h2>How do I cancel?</h2>
+                    <i class="fa-solid fa-plus"></i>
+                </a>
+                <p class="paras" id="paras4">
+                    Netflix is flexible. There are no annoying contracts and no commitments. You can easily cancel your
+                    account online in two clicks. There are no cancellation fees – start or stop your account anytime.
+                </p>
             </div>
             <div class="drops">
-                <h2>How do I cancel?</h2>
-                <i class="fa-solid fa-plus"></i>
-            </div>
-            <div class="drops">
-                <h2>Is Netflix good for kids?</h2>
-                <i class="fa-solid fa-plus"></i>
+                <a href="javascript:" onclick="toggleVisibility(6)">
+                    <h2>Is Netflix good for kids?</h2>
+                    <i class="fa-solid fa-plus"></i>
+                </a>
+                <p class="paras" id="paras6">
+                    The Netflix Kids experience is included in your membership to give parents control while kids enjoy
+                    family-friendly TV shows and films in their own space.
+
+                    Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of
+                    content kids can watch and block specific titles you don’t want kids to see.
+                </p>
             </div>
         </div>
+        <div class="showcase-content" style="margin-top: 40px; top:0">
+            <div>
+                <p>Ready to watch? Enter your email to create or restart your membership.</p>
+                <input class="email" placeholder="Email address" style="margin-right: 30px;">
+                <a href="#" class="btn btn-xl" style="margin-right: 30px;">Get Started <i
+                        class="fas fa-chevron-right btn-icon"></i></a>
+            </div>
+        </div>
+
     </footer>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
